Needs cleaning badly - added referrals query and hash translation - need to address pie chart

--- a/app/views/statistics/show.html.erb
+++ b/app/views/statistics/show.html.erb
@@ -104,7 +104,7 @@
 			<br>
 		
 			<h4 class="text-center">Referrals</h4>
-		  <%= pie_chart @referrals.sort_by{|k,v| v}.reverse, adapter: "google"%>
+		  <%= pie_chart @testref.sort_by{|k,v| v}.reverse %>
 
 			<br>
 		  <hr>
