--- a/app/views/statistics/index.html.erb
+++ b/app/views/statistics/index.html.erb
@@ -55,7 +55,7 @@
 	</table>
 	
 	<h2 style="display:inline;">  Student Referral Sources</h2><h4 style="display:inline;"> (Deselect 'other' sources for better view)</h4>
-	<%= pie_chart @referrals.sort_by{|k,v| v}.reverse, adapter: "google" %>
+	<%= pie_chart @referrals.sort_by{|k,v| v}.reverse %>
 
 </div>
 
