--- a/app/views/statistics/show.html.erb
+++ b/app/views/statistics/show.html.erb
@@ -111,7 +111,7 @@
 	
 			<br>
 		  <h4 class="text-center">Movies</h4>
-		  <%= pie_chart @movies.sort_by{|k,v| v}.reverse, adapter: "google"%>
+		  <%= pie_chart @movies.sort_by{|k,v| v}.reverse %>
 	  </div>
 	</div>
 </div>
