--- a/app/views/merge_students/show.html.erb
+++ b/app/views/merge_students/show.html.erb
@@ -1,47 +1,45 @@
 <div class="container p-rel">
-	<h1 class = "text-center">Choose the Student you would like to have merged.</h1>
-	<div class = "text-center"><a href="/merge_students">Go Back To Search</a></div>
-		<table class="table">
-			<thead>
-				<tr>
-					<th>
-						Name
-					</th>
-					<th>
-						Email
-					</th>
-					<th>
-						School
-					</th>
-					<th>
-						Attendances
-					</th>
-					<th>
-						Merge?
-					</th>
-				</tr>			
-			</thead>
-			<tbody>
-					<% @student1.each do |student| %>
-						<tr>
-							<td>
-								<%= student.name %>
-							</td>
-							<td>
-								<%= student.email %>
-							</td>
-							<td>
-								<%= student.school.name %>
-							</td>
-							<td>
-								<%= student.attendances.count %>
-							</td>
-							<td>
-								<a href="/merge_students/findSecond/<%= student.id%>" class="btn custom-btn borderless"> Merge <span class="glyphicon glyphicon-edit"></span></a>
-							</td>
-						</tr>
-					<% end %>
-			</tbody>
-		</table>
-	</div>
+	<h1 class = "text-center">Choose the Student you would like to have <%= @student1.name %> merged to.</h1>
+	<table class="table">
+		<thead>
+			<tr>
+				<th>
+					Name
+				</th>
+				<th>
+					Email
+				</th>
+				<th>
+					School
+				</th>
+				<th>
+					Attendances
+				</th>
+				<th>
+					Merge?
+				</th>
+			</tr>			
+		</thead>
+		<tbody>
+				<% @student2.each do |student| %>
+					<tr>
+						<td>
+							<%= student.name %>
+						</td>
+						<td>
+							<%= student.email %>
+						</td>
+						<td>
+							<%= student.school.name %>
+						</td>
+						<td>
+							<%= student.attendances.count %>
+						</td>
+						<td>
+							<a href="/merge_students/<%= student.id%>/edit?change=<%= @student1.id%>" class="btn custom-btn borderless"> Keep <span class="glyphicon glyphicon-edit"></span></a>
+						</td>
+					</tr>
+				<% end %>
+		</tbody>
+	</table>
 </div>
