--- a/app/views/merge_students_search/show.html.erb
+++ b/app/views/merge_students_search/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container p-rel">
 	<h1 class = "text-center">Choose the Student you would like to have merged.</h1>
-	<div class = "text-center"><a href="/merge_students">Go Back To Search</a></div>
+	<div class = "text-center"><a href="/merge_students_search">Go Back To Search</a></div>
 		<table class="table">
 			<thead>
 				<tr>
@@ -37,7 +37,7 @@
 								<%= student.attendances.count %>
 							</td>
 							<td>
-								<a href="/merge_students/findSecond/<%= student.id%>" class="btn custom-btn borderless"> Merge <span class="glyphicon glyphicon-edit"></span></a>
+								<a href="/merge_students?id=<%= student.id %>" class="btn custom-btn borderless"> Merge <span class="glyphicon glyphicon-edit"></span></a>
 							</td>
 						</tr>
 					<% end %>
