Added working logo image tags, added placeholder logos

--- a/app/views/checkins/new.html.erb
+++ b/app/views/checkins/new.html.erb
@@ -1,7 +1,7 @@
 <body style="background-color:<%= brand_colors(@event) %>">
 <div class="container">
   <h2 class="text-center">Hello!</h2>
-  <h2><img src="<%=  event_logo(@event) %>" alt="<%= event_location(@event) %> logo"></h2>
+  <%= image_tag "#{event_logo(@event)}" %>
   <h4 class="text-center">Let's get you checked in.</h4>
   <hr>
   <div class="row">
