--- a/app/views/merge_students/update.html.erb
+++ b/app/views/merge_students/update.html.erb
@@ -17,4 +17,7 @@
 			</tr>
 		</tbody>
 	</table>
+	<div class = "text-center">
+		<a href="/merge_students_search">Merge Another</a>
+	</div>
 </div>
