--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 
 	<link rel="shortcut icon" href="http://www.filmstreams.org/wp-content/themes/filmstreams/inc/images/favicon.ico" />
 </head>
-<%= body_tag(@event) %>
+<body style="<%= theater_color_style(@event) %>" >
     <% if !@checkin %>
       <div class="cHeader">
         <%= render 'layouts/header' %>
