added some todo notes

--- a/app/views/students/_formnew.html.erb
+++ b/app/views/students/_formnew.html.erb
@@ -24,6 +24,8 @@
     <%= f.text_field :zip, class: 'form-control' %>
   </div>
 
+
+  <!-- TODO: Add this code to a helper -->
   <div class="form-group">
     <%= f.label :referrals, 'How did you hear about us?' %>
 
