moved check box generation into helpers. need to fix formatting for bottom of page

--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -28,27 +28,7 @@
 
   <div class="form-group">
     <%= f.label :referrals, 'How did you hear about us?' %>
-
-    <% referrals_to_compare = [] %>
-    <% current_referrals = Referral.where(student_id: @student.id) %>
-    <% current_referrals.each do |referral| %>
-      <% referrals_to_compare.push(referral.referral_type) %>
-    <% end %>
-
-    <% Referral.referral_types.each do |referral| %>
-      <% if referrals_to_compare.include?(referral[0]) %>
-        <div> 
-          <%= referral[0] %>
-          <input type="checkbox" name="referrals[]" value="<%= referral[1] %>" checked>
-        </div>
-      <% else %>
-        <div> 
-          <%= referral[0] %>
-          <input type="checkbox" name="referrals[]" value="<%= referral[1] %>">
-        </div>
-      <% end %>
-    <% end %>
-
+    <%= render_checkboxes_update(@student.id) %>
   </div>
 
   <div class="form-group">
