--- a/app/views/layouts/_stats_header.html.erb
+++ b/app/views/layouts/_stats_header.html.erb
@@ -3,5 +3,6 @@
   	<p class="navbar-text"><a href="/statistics">Overview</a></p>
   	<p class="navbar-text"><a href="/statistics/by_date">Students & Schools</a></p>
   	<p class="navbar-text"><a href="/statistics/list?year=<%=Date.today.year%>">Per Event</a></p>
+  	<p class="navbar-text"><a href="/export">Export</a></p>
   </div>
 </nav>
