--- a/app/views/statistics/student.erb
+++ b/app/views/statistics/student.erb
@@ -37,7 +37,7 @@
 				<td><%= @student.attendances.count %></td>
 				<td>
 
-					<%= def print_referral_types(@student.referrals) %>
+					<%= print_referral_types(@student.referrals) %>
 
 					<% @student.referrals.each do |referral| %> 
 						<%=  referral.referral_type + ", " %> 
