adjusted col tag to use css

--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -27,7 +27,7 @@
   <div class="form-group">
     <%= f.label :referrals, 'How did you hear about us?' %>
     <table>
-      <col width="240">
+      <col style="width:240px;">
         <%= render_checkboxes_update(@student.id) %>  
       </table>
   </div>
