added second col tag for validation, and removed div

--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -28,6 +28,7 @@
     <%= f.label :referrals, 'How did you hear about us?' %>
     <table>
       <col style="width:240px;">
+      <col>
         <%= render_checkboxes_update(@student.id) %>  
       </table>
   </div>
