updated form new

--- a/app/views/students/_formnew.html.erb
+++ b/app/views/students/_formnew.html.erb
@@ -27,7 +27,8 @@
   <div class="form-group">
     <%= f.label :referrals, 'How did you hear about us?' %>
     <table>
-      <col width="240">
+      <col style="width:240px;">
+      <col>
       <%= render_checkboxes_new %>
     </table>
   </div>
