--- a/app/views/students/_formnew.html.erb
+++ b/app/views/students/_formnew.html.erb
@@ -29,7 +29,7 @@
     <table>
       <col style="width:240px;">
       <col>
-        <%= render_checkboxes_update(@student.id) %>  
+        <%= render_checkboxes_new %>  
     </table>
   </div>
 
