removed form new and updated render

--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -29,7 +29,7 @@
     <table>
       <col style="width:240px;">
       <col>
-        <%= render_checkboxes_update(@student.id) %>  
+        <%= determine_view(params['id']) %>
     </table>
   </div>
 
