adjusted formatting in student erb

--- a/app/views/statistics/student.erb
+++ b/app/views/statistics/student.erb
@@ -35,9 +35,7 @@
 		<tbody>
 			<tr>
 				<td><%= @student.attendances.count %></td>
-				<td>
-					<%= print_referral_types(@student.referrals) %>
-				</td>
+				<td><%= print_referral_types(@student.referrals) %></td>
 			</tr>
 		</tbody>
 	</table>
