--- a/app/views/statistics/index.html.erb
+++ b/app/views/statistics/index.html.erb
@@ -9,10 +9,10 @@
 
 	<!-- This qeury selects all attendances from a location -->
 	<!-- TODO: SELECT * FROM attendances JOIN events ON attendances.event_id = events.id WHERE events.location = 0; --> 
-	
-	
+
+	<%= @events_by_location %>
 	<%= line_chart [
-	  {name: "All Attendances", data: Attendance.all.group_by_year(:created_at).count.map},
+	  {name: "All Attendances", data: @events_by_location},
 	  {name: "Unique Students", data: @unique_students.map},
 	  {name: "Unique Schools", data:  @unique_schools.map} 
 	]%>  
