--- a/app/views/statistics/index.html.erb
+++ b/app/views/statistics/index.html.erb
@@ -9,13 +9,18 @@
 
 	<!-- This qeury selects all attendances from a location -->
 	<!-- TODO: SELECT * FROM attendances JOIN events ON attendances.event_id = events.id WHERE events.location = 0; --> 
-
+	<%= @locatation_attendances %>
 	<%= @events_by_location %>
 	<%= line_chart [
 	  {name: "All Attendances", data: @events_by_location},
 	  {name: "Unique Students", data: @unique_students.map},
 	  {name: "Unique Schools", data:  @unique_schools.map} 
-	]%>  
+	]%> 
+
+
+
+
+
 	<h2>Attendances By Year</h2>
 	<table class="table table-bordered">
 		<thead>
