added another graph

--- a/app/views/statistics/index.html.erb
+++ b/app/views/statistics/index.html.erb
@@ -15,6 +15,13 @@
 	  {name: "All Attendances", data: @attendances_by_location}
 	]%> 
 
+		<%= @locatation_attendances %>
+	<%= @events_by_location %>
+	<%= line_chart [
+	  {name: "All Attendances", data: @attendances_by_location}
+	]%> 
+
+
 
 
 
