added ruth sokolof theater

--- a/app/views/statistics/index.html.erb
+++ b/app/views/statistics/index.html.erb
@@ -27,6 +27,31 @@
 
 
 
+	<h2>Attendances By Year For The Ruth Sokolof Theater</h2>
+	<table class="table table-bordered">
+		<thead>
+			<tr>
+				<th>Year</th>
+				<th>Total Attendances</th>
+				<th>Unique Students</th>
+				<th>Unique Schools</th>
+			</tr>
+		</thead>
+		<tbody>
+			<%  @years_by_location.each do |year|  %>
+				<tr>
+					<td><%= year %></td>
+					<td><%= Event.new.year_student_attendances(year) %></td>
+					<td><%= Event.new.unique_student_attendances(year) %></td>
+					<td><%= Event.new.unique_schools(year) %></td>
+				</tr>
+			<% end %>
+		</tbody>
+	</table>
+
+
+
+
 	<h2>Attendances By Year</h2>
 	<table class="table table-bordered">
 		<thead>
