renamed helper var name

--- a/app/views/statistics/index.html.erb
+++ b/app/views/statistics/index.html.erb
@@ -38,7 +38,7 @@
 			</tr>
 		</thead>
 		<tbody>
-			<%  @years_by_location.each do |year|  %>
+			<%  @years_for_ruth_sokolof.each do |year|  %>
 				<tr>
 					<td><%= year %></td>
 					<td><%= Event.new.year_student_attendances(year) %></td>
