renamed table on statistics index

--- a/app/views/statistics/index.html.erb
+++ b/app/views/statistics/index.html.erb
@@ -49,7 +49,7 @@
 		</tbody>
 	</table>
 
-	<h2>Attendances By Year For The Ruth Sokolof Theater</h2>
+	<h2>Attendances By Year For The Dundee Theater</h2>
 	<table class="table table-bordered">
 		<thead>
 			<tr>
