fixed some formatting in helpers

--- a/app/views/statistics/index.html.erb
+++ b/app/views/statistics/index.html.erb
@@ -135,7 +135,7 @@
 		  	<td>Total</td>
 		  	<td><%= @location_attends %></td>
 		  	<td><%= @location_students %></td>
-		  	<td><%= @location_schools %></td>
+		  	<td><%= @location_students_grouped.values.sum %></td>
 		  </tr>
 		  <tr>
 		  	<td>Avg</td>
