--- a/app/views/statistics/index.html.erb
+++ b/app/views/statistics/index.html.erb
@@ -141,11 +141,38 @@
 		  	<td>Avg</td>
 		  	<td><%= @attendances/@years.length %></td>
 		  	<td><%= @location_students/get_years_for_location(0).count %></td>
-		  	<td><%= @unique_schools.values.sum/@unique_schools.count %></td>
+		  	<td><%= @location_schools/get_years_for_location(0).count %></td>
 		  </tr>
 		</tbody>
 	</table>
 
+
+
+	<h2>All Time For The Dundee Theater</h2>
+	<table class="table table-bordered">
+		<thead>
+			<tr>
+				<th></th>
+				<th>Total Attendances</th>
+				<th>Unique Students</th>
+				<th>Unique Schools</th>
+			</tr>
+		</thead>
+		<tbody>
+		  <tr>
+		  	<td>Total</td>
+		  	<td><%= @location_attends %></td>
+		  	<td><%= @location_students %></td>
+		  	<td><%= @location_schools %></td>
+		  </tr>
+		  <tr>
+		  	<td>Avg</td>
+		  	<td><%= @attendances/@years.length %></td>
+		  	<td><%= @location_students/get_years_for_location(1).count %></td>
+		  	<td><%= @location_schools/get_years_for_location(1).count %></td>
+		  </tr>
+		</tbody>
+	</table>
 
 
 
