added function calls to statistics index

--- a/app/views/statistics/index.html.erb
+++ b/app/views/statistics/index.html.erb
@@ -134,8 +134,8 @@
 		  <tr>
 		  	<td>Total</td>
 		  	<td><%= @location_attends %></td>
-		  	<td><%= @location_students %></td>
-		  	<td><%= @location_schools %></td>
+		  	<td><%= location_students_grouped(0).values.sum %></td>
+		  	<td><%= location_school_grouped(0).values.sum %></td>
 		  </tr>
 		  <tr>
 		  	<td>Avg</td>
