--- a/app/views/checkins/new.html.erb
+++ b/app/views/checkins/new.html.erb
@@ -1,8 +1,24 @@
+<style type="text/css">
+  .checkin-header{
+    margin-top: 30px;
+    text-align: center;
+  }
+  .checkin-header img{
+    width: 200px;
+  }
+</style>
+
+<div class="container checkin-header">
+  <%= image_tag("#{event_logo(@event)}", class: "checkin-theater-logo") %>
+</div>
+
 <div class="container">
-  <h2 class="text-center">Hello!</h2>
-  <h4 class="text-center">Let's get you checked in.</h4>
-  <%= image_tag("#{event_logo(@event)}", style: 'display: block; margin: auto; width: 40%;') %>
   <hr>
+  <!-- <h2 class="text-center" >Hello! Let's get you checked in.</h2> -->
+
+  <h2 class="text-center" style="margin-top: 45px;">Hello!</h2>
+  <h4 class="text-center" style="margin-bottom: 45px;">Let's get you checked in.</h4>
+
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
 
