--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
       </div>
     <% else %>
       <div class='cHeader'>
-        <%= render 'layouts/student_header' %>
+        <%# render 'layouts/student_header' %>
       </div>
     <% end %>
 
