--- a/app/views/admin_students/index.html.erb
+++ b/app/views/admin_students/index.html.erb
@@ -2,8 +2,8 @@
 	<div class="container bottom_space">
 	  	<div class="row">
 	    	<div class="col-md-6 col-md-offset-3">
-	    		<h1 class="text-center">Search for student area.</h1>
-	      		<h2 class="text-center">If your search yields nothing try typing part of the name</h2>
+	    		<h1 class="text-center">Manage Students</h1>
+	      		<h2 class="text-center">Search by name (or partial name).</h2>
 	      		<div>
 	   				<%= form_for "findingStudents", method: 'get' do |f| %>
 		      			<div class= "form-group">
