--- a/app/views/admin_students/show.html.erb
+++ b/app/views/admin_students/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container p-rel">
-	<h1 class = "text-center">Here are the results that were found for <%= @findStudent %></h1>
+	<h1 class = "text-center">Results for '<%= @findStudent %>'</h1>
 	<div class = "text-center"><a href="/admin_students">Go Back To Search</a></div>
 	<table class="table">
 		<thead>
