--- a/app/views/admin_students/show.html.erb
+++ b/app/views/admin_students/show.html.erb
@@ -14,6 +14,8 @@
 					<!-- placeholder for edit -->
 				</th>
 				<th>
+				</th>
+				<th>
 					<!-- placeholder for delete -->
 				</th>
 			</tr>			
@@ -31,6 +33,11 @@
 						<td>
 							<a href="/admin_students/<%= student.id%>/edit" class="btn custom-btn borderless"> Edit <span class="glyphicon glyphicon-edit"></span></a>
 						</td>
+
+						<td>
+							<a href="/merge_students?id=<%= student.id %>" class="btn custom-btn borderless"> Merge <span class="glyphicon glyphicon-transfer"></span></a>
+						</td>
+
 						<td>
 							<%= button_to('Destroy', "/admin_students/#{student.id}", class: 'btn custom-btn-dngr navbar-btn', method: "delete", data: { confirm: 'Are you sure?', disable_with: 'loading...' }) %>
 						</td>
