finished replacing queries with hash values for r1 in ruth sokol

--- a/app/views/statistics/index.html.erb
+++ b/app/views/statistics/index.html.erb
@@ -168,8 +168,8 @@
 		  <tr>
 		  	<td>Total</td>
 		  	<td><%= @location_stats['ruth_sokolof']['total_attendances'] %></td>
-		  	<td><%= location_students(0) %></td>
-		  	<td><%= location_schools(0) %></td>
+		  	<td><%= @location_stats['ruth_sokolof']['total_students']  %></td>
+		  	<td><%= @location_stats['ruth_sokolof']['total_schools'] ) %></td>
 		  </tr>
 		  <tr>
 		  	<td>Avg (year)</td>
