--- a/app/views/statistics/index.html.erb
+++ b/app/views/statistics/index.html.erb
@@ -173,9 +173,9 @@
 		  </tr>
 		  <tr>
 		  	<td>Avg (year)</td>
-		  	<td><%= get_attends_for_location(0) / @years.length %></td>
-		  	<td><%= location_students(0) / location_students_grouped(0).count %></td>
-		  	<td><%= location_schools_grouped(0).values.sum / location_schools_grouped(0).count %></td>
+		  	<td><%= @location_stats['ruth_sokolof']['total_attendances'] / @location_stats['ruth_sokolof']['students_grouped'].count %></td>
+		  	<td><%= @location_stats['ruth_sokolof']['total_students'] / @location_stats['ruth_sokolof']['students_grouped'].count %></td>
+		  	<td><%= @location_stats['ruth_sokolof']['schools_grouped'].values.sum / @location_stats['ruth_sokolof']['schools_grouped'].count %></td>
 		  </tr>
 		</tbody>
 	</table>
