added Started GET /assets/export_data.self-877aef30ae1b040ab8a3aba4e3e309a11d7f2612f44s

--- a/app/views/statistics/index.html.erb
+++ b/app/views/statistics/index.html.erb
@@ -57,7 +57,7 @@
 					<td><%= year %></td>
 					<td><%= Event.new.attends_by_year_for_loc(year, 0) %></td>
 					<td><%= Event.new.students_by_year_for_loc(year, 0) %></td>
-					<td><%= Event.new.unique_schools(year) %></td>
+					<td><%= Event.new.unique_schools_by_loc(year, 0) %></td>
 				</tr>
 			<% end %>
 		</tbody>
@@ -79,7 +79,7 @@
 					<td><%= year %></td>
 					<td><%= Event.new.attends_by_year_for_loc(year, 1) %></td>
 					<td><%= Event.new.students_by_year_for_loc(year, 1) %></td>
-					<td><%= Event.new.unique_schools(year) %></td>
+					<td><%= Event.new.unique_schools_by_loc(year, 1) %></td>
 				</tr>
 			<% end %>
 		</tbody>
