added location, ruth_sokolof, dundee controllers

--- a/app/views/layouts/_stats_header.html.erb
+++ b/app/views/layouts/_stats_header.html.erb
@@ -1,6 +1,8 @@
 <nav class="navbar navbar-default navbar-static-top">
   <div class="container">
   	<p class="navbar-text"><a href="/statistics">Overview</a></p>
+  	<p class="navbar-text"><a href="/statistics/location?location='Ruth Sokolof'">Ruth Sokolof</a></p>
+  	<p class="navbar-text"><a href="/statistics/location">Dundee</a></p>
   	<p class="navbar-text"><a href="/statistics/by_date">Students & Schools</a></p>
   	<p class="navbar-text"><a href="/statistics/list?year=<%=Date.today.year%>">Per Event</a></p>
   	<p class="navbar-text"><a href="/export">Export</a></p>
