--- a/app/views/layouts/_stats_header.html.erb
+++ b/app/views/layouts/_stats_header.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default navbar-static-top">
   <div class="container">
   	<p class="navbar-text"><a href="/statistics">Overview</a></p>
-  	<p class="navbar-text"><a href="/statistics/ruth_sokolof'">Ruth Sokolof</a></p>
+  	<p class="navbar-text"><a href="/statistics/ruth_sokolof">Ruth Sokolof</a></p>
   	<p class="navbar-text"><a href="/statistics/dundee">Dundee</a></p>
   	<p class="navbar-text"><a href="/statistics/by_date">Students & Schools</a></p>
   	<p class="navbar-text"><a href="/statistics/list?year=<%=Date.today.year%>">Per Event</a></p>
