--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -4,7 +4,7 @@
   <%= f.hidden_field :email, class: 'form-control' %>
 
   <div class="form-group">
-    <%= f.label :name %>
+    <%= f.label :name, "Full Name" %>
     <%= f.text_field :name, class: 'form-control' %>
   </div>
 
@@ -20,7 +20,7 @@
   </div>
 
   <div class="form-group">
-    <%= f.label :zip %>
+    <%= f.label :zip, "Home Zip Code" %>
     <%= f.text_field :zip, class: 'form-control' %>
   </div>
 
