--- a/app/views/events/past.html.erb
+++ b/app/views/events/past.html.erb
@@ -25,7 +25,7 @@
 						<%= event.title %>
 					</td>
 					<td>
-						<a href="events/<%= event.id %>" class="btn custom-btn borderless">
+						<a href="/events/<%= event.id %>" class="btn custom-btn borderless">
 							Edit <span class="glyphicon glyphicon-edit"></span>
 					  </a>
 					</td>
@@ -34,6 +34,6 @@
 			
 		</tbody>
 	</table>
-	<a href="../events" class="btn custom-btn borderless">
+	<a href="/events" class="btn custom-btn borderless">
 	Return to Upcoming Events<span class="glyphicon glyphicon-view"></span></a>
 </div>
